# surrealengine

./: .dockerignore  .gitignore  CHANGES.md  Cargo.toml  README.md  benchmark_zero_copy.py  jupyter_lab_config.py  pyproject.toml  pyrefly.toml  requirements.txt  verify_rust.py  verify_zero_copy.py
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
example_scripts/: check_single_string_transaction.py  connection_and_observability_example.py  demo_conditional_aggregations.py  graph_and_live_example.py  hybrid_schema_example.py  isolate_sdk_bug.py  query_expressions_example.py  relation_example.py  relationships_example.py  schema_management_example.py  sync_api_example.py  test_aggregation_syntax.py  test_conditional_aggregations.py  test_conditional_aggregations_simple.py  test_enhanced_document.py  test_ergonomic_features.py  test_live_fanout_app.py  test_live_queries.py  test_live_queries_pooling.py  test_new_features.py  test_operation_queue_metrics.py  test_performance_optimizations.py  test_pool_pruning.py  test_record_id_handling.py  test_sdk_live.py  test_sequences.py  test_smart_save.py  test_transaction.py  test_v3_0_0_partial.py  test_v3_0_0_schema.py  verify_fields_3_0.py
notebooks/: 14_full_text_search.ipynb  README.md  advanced_data_features.ipynb  bidirectional_relations.ipynb  bulk_relate.ipynb  define_sequence.ipynb  ergonomics_demo.ipynb  graph_features_test.ipynb  hybrid_schemas.ipynb  mixins_and_hooks.ipynb  pagination.ipynb  polyglot_api.ipynb  relation_document.ipynb  relationships.ipynb  schema_management.ipynb  signals_example.ipynb  sync_api.ipynb  v0_6_0_features.ipynb  v0_7_0_features.ipynb  v1_2_context_scoped_sync_manager.ipynb  v1_2_live_reliability_patterns.ipynb  v1_2_replay_checkpoint_recovery.ipynb  v1_2_search_ergonomics.ipynb  v1_2_syncmanager_routing.ipynb  v1_x_surrealkv_features.ipynb  zero_copy_benchmark.ipynb
scripts/: live_reliability_smoke.py
src/: lib.rs
src/surrealengine/: __init__.py  aggregation.py  analyzers.py  base_query.py  connection.py  context.py  datagrid_api.py  document.py  document_update.py  embedded.py  events.py  exceptions.py  expr.py  fields.py  functions.py  graph.py  logging.py  materialized_view.py  meta.py  mixins.py  pagination.py  query.py  query_expressions.py  raw_connection.py  reactive.py  record_id_utils.py  relation_update.py  schema.py  schemaless.py  signals.py  surrealql.py  sync_manager.py  transaction.py
src/surrealengine/fields/: __init__.py  additional.py  base.py  collection.py  datetime.py  embedded.py  geometry.py  id.py  reference.py  scalar.py  specialized.py
src/surrealengine/query/: base.py  descriptor.py  relation.py
src/surrealengine/utils/: parsing.py  tracking.py
