[package]
name = "surrealengine_accelerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "surrealengine_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
arrow = { version = "52.0.0", features = ["pyarrow"] }
pyo3-arrow = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_arrow = { version = "0.13.7", features = ["arrow-52"] }
cbor4ii = { version = "0.3.2", features = ["serde1"] }
