[package]
name = "surrealengine_accelerator"
version = "0.1.0"
edition = "2021"

[lib]
name = "surrealengine_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cbor4ii = { version = "0.3.2", features = ["serde1"] }
pyo3-arrow = "0.7.0"
arrow = { version = "54.0.0", features = ["pyarrow"] }
serde_arrow = { version = "0.14.0", features = ["arrow-54"] }
