[package]
name = "surrealengine_accelerator"
version = "0.1.0"
edition = "2021"

[lib]
name = "surrealengine_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cbor4ii = { version = "0.3.2", features = ["serde1"] }
arrow = { version = "58.0.0", features = ["pyarrow"] }
serde_arrow = { version = "0.14", features = ["arrow-58"] }
