[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "surrealengine.surrealengine_accelerator"
python-source = "src"

[project]
name = "surrealengine"
version = "0.7.0"
description = "An async Object-Document Mapper (ODM) for SurrealDB"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [
    {name = "Iristech Systems"}
]
keywords = ["surrealdb", "odm", "database", "async", "orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

# Core dependencies - minimal set required for basic functionality
dependencies = [
    "surrealdb>=1.0.8",          # Core SurrealDB client
    "typing-extensions>=4.12.0", # Typing support for older Python
    "cbor2>=5.6.0",              # CBOR serialization
    "websockets>=12.0",          # WebSocket support
]

[project.optional-dependencies]
# Signals support (pre/post save hooks, etc.)
signals = [
    "blinker>=1.6.2",
]

# Zero-copy data acceleration (PyArrow, Polars)
data = [
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
]

# Jupyter notebook integration
jupyter = [
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
]

# Development dependencies
dev = [
    "maturin>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

# Everything - for full-featured installations
all = [
    "surrealengine[signals,data,jupyter]",
]

[project.urls]
"Homepage" = "https://github.com/iristech-systems/surrealengine"
"Bug Tracker" = "https://github.com/iristech-systems/surrealengine/issues"
"Documentation" = "https://github.com/iristech-systems/surrealengine#readme"

[dependency-groups]
dev = [
    "maturin>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[tool.ruff]
exclude = [
    "surrealdb_documentation",
    "example_scripts",
    "notebooks",
    "tests",
    "verify_*.py",
    "jupyter_lab_config.py",
    "benchmark_zero_copy.py",
]

[tool.pyrefly]
exclude = [
    "surrealdb_documentation",
    "example_scripts",
    "notebooks",
    "tests",
    "verify_*.py",
    "jupyter_lab_config.py",
    "benchmark_zero_copy.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=surrealdb_documentation"
